# rust-training

./: Cargo.toml  README.md
axum-live/: Cargo.toml
axum-live/src/: main.rs
axum-ws-live/: Cargo.toml
axum-ws-live/src/: lib.rs  main.rs  msg.rs
etcd-live/: Cargo.toml
everyday/: Cargo.toml
everyday/src/: closure.rs  collections.rs  lifecycle.rs  logging.rs  main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml  README.md  bai.proto  build.rs
kv/src/: client.rs  noise_codec.rs  server.rs
kv/src/protobuf/: abi.rs  mod.rs
mysql-sample-wasi/: Cargo.toml
mysql-sample-wasi/src/: main.rs
pow/: Cargo.toml  abi.proto  build.rs
pow/src/: client.rs  pow.rs  server.rs
pow/src/protobuf/: abi.rs
prost-live/: Cargo.toml  README.md  build.rs  person.proto
prost-live/src/: main.rs
prost-live/src/protobuf/: mod.rs  person.rs
redis-live/: Cargo.toml
redis-live/src/: main.rs
redis-script/: Cargo.toml
redis-script/src/: main.rs
