[package]
name = "axum-ws-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version= "0.5.11", features = ["ws"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.82"
futures = "0.3.21"
tokio = {version = "1.19.2", features = ["full"]}
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
dashmap = "5.3.4"