[package]
name = "everyday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
html2md = "0.2"
tracing="0.1.40"
log="0.4.14"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["alloc","fmt"] }
tokio = { version = "1", features = ["full"] }