[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.19.2", features = ["net", "macros", "rt-multi-thread", "io-std"] }
tokio-util = {version = "0.7.3", features = ["codec"]}
prost = "0.10.4"
dashmap = "5.3.4"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
anyhow = "1.0.58"
futures = "0.3.21"
snow = "0.9.0"
bytes = "1.1.0"

[build-dependencies]
prost-build = "0.10.4"