[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
rayon = "1.5.3"
anyhow = "1.0.51"
blake3 = "1.3.1"
prost = "0.10.4"
tonic = "0.7.2"
tokio = { version = "1.19.2", features = ["sync", "macros", "rt", "rt-multi-thread"] }
futures = "0.3.21"
tokio-stream = { version = "0.1.8" }
hex = "0.4.3"

tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[build-dependencies]
tonic-build = "0.7.2"