[package]
name = "prost-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
bytes = "1.1.0"
anyhow = "1.0.58"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.82"

[build-dependencies]
prost-build = "0.10.4"