[package]
name = "redis-live"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.23.3", features = ["tokio-comp"] }
anyhow = "1.0.71"
tokio = {version = "1.28.2", features = ["full"]}
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
thiserror="1.0.61"
log = "0.4.21"