[package]
name = "redis-script"
version = "0.1.0"
edition = "2021"
include=["env.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.3", features = ["tokio-comp"] }
anyhow = "1.0.71"
clap = {version = "4.3.2", features = ["derive"]}
colored = "2.0.0"
tokio = {version = "1.28.2", features = ["full"]}
serde = "1.0.163"
serde_json = "1.0.96"
serde_derive = "1.0.163"
jsonxf = "1.1.1"
chrono = "0.4.26"
toml = "0.7.4"